achievements screen added. splash screen updated. routing bug fixed

--- a/app.json
+++ b/app.json
@@ -4,14 +4,13 @@
     "slug": "DailyQuest",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/a.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/images/a.png",
+      "backgroundColor": "black"
     },
     "ios": {
       "supportsTablet": true
