--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.23",
     "expo-font": "~13.0.2",
+    "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.29.18",
