--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "metro": "^0.81.0",
+    "openai": "^4.78.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -34,7 +35,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
